[JUnit] Only report the first failed assumption
The junit-vintage implementation of junit-5 reports multiple failed
assumptions as a MultipleFailure and treats it as a failure of the
test case. As such we can only provide the first failed assumption.